[package]
edition = "2021"
name = "blink"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
# cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }

embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-32768"] }
# embassy-futures = { version = "0.1.0" }
# embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
# rp2040-hal = { version = "0.11.0", features = ["binary-info", "critical-section-impl", "rt", "defmt"]}
# rp235x-hal = { version = "0.3.0"}

## need these for pio
# pio-proc = "0.2.2"
# pio = "0.2.1"
## USB + logging via USB support (note: embassy-usb-logger requires portable-atomic with critical-section feature enabled)
# embassy-usb-driver = { version = "0.1.0", features = ["defmt"] }
# embassy-usb-logger = { version = "0.2.0" }
portable-atomic = { version = "1.6.0", features = ["critical-section"] }
# log = "0.4"
## network support
# embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
## pico-w support
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }
static_cell = { version = "2.1" }
# heapless = "0.8.0"
# rand_core = "0.6.4"

i2c-character-display = { version = "0.4", features = ["defmt"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

embedded-graphics = "0.8.1"
sh1106 = "0.5.0"
heapless = "0.8.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
