[package]
edition = "2021"
name = "blink"
version = "0.1.0"
license = "MIT"

[dependencies]
cortex-m-rt = "0.7.5"

defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.8.0"

embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "task-arena-size-32768"] }
embassy-futures = { version = "0.1.1" }
# embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }

embassy-rp = { version = "0.6.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }

## network support
# embassy-net = { version = "0.4.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }

## pico-w support
cyw43 = { version = "0.4.0", features = ["defmt", "firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.5.0", features = ["defmt"] }
static_cell = { version = "2.1" }

## bluetooth support
# trouble-host = { version = "0.2.4", features = ["derive", "scan"] }
trouble-host = { version = "0.2.4", features = ["default-packet-pool-mtu-128"] }
bt-hci = { version = "0.3.2" }

## graphics display 128x64
embedded-graphics = "0.8.1"
sh1106 = "0.5.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true
lto = "off"

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'

[[bin]]
name = "pico_w_blink"
path = "src/main.rs"
test = false
doctest = false
bench = false