[package]
name = "zero_cam_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
libcamera = { version = "0.4.0"}
# v4l = { version = "0.14.0", features = ["v4l2"] }

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
#pre-build = ["dpkg --add-architecture $CROSS_DEB_ARCH && apt-get update && apt-get install --assume-yes libcamera libcamera-dev"]
dockerfile = "./Dockerfile"
